<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.curiousca.takenote.MainActivity">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/add_a_new_memo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="101"
        android:title="@string/delete_all_notes" />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="never"
        android:orderInCategory="103"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"
        android:orderInCategory="102"/>


</menu>
